--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		}
 
 		div.frame{
+			display: ;
 			border-style: outset;
 			border-width: 10px;
 			height: min-content ;
@@ -43,9 +44,49 @@
 			width: fit-content;
 			margin:auto;
 			background-image: url("images/PATT035.JPG");
+			color: #ffe9e9;
+			font-size: 2em;
+		}
+
+		div.musak{
+			border-style: outset;
+			border-width: 10px;
+			height: min-content ;
+			width: fit-content;
+			margin:auto;
+			background-image: url("images/music/musicBk.jpg");
+		}
+
+		div.construction{
+			border-style: outset;
+			border-width: 10px;
+			height: min-content ;
+			width: fit-content;
+			margin:auto;
+			background-color: #FFFFFF;
+			color: #000000;
+		}
+
+		div.post{
+			border-style: outset;
+			border-width: 10px;
+			height: min-content ;
+			width: fit-content;
+			margin:auto;
+			background-image: url("images/post/stamps.jpg");
+			text-rendering: auto;
 			
-			
-		
+			font-size: 2em;
+			color: #FFFFFF;
+		}
+		div.links{
+			border-style: outset;
+			border-width: 10px;
+			height: min-content ;
+			width: fit-content;
+			margin:auto;
+			background-color: #FFFFFF;
+			color: #000000;
 		}
 
 		
@@ -94,18 +135,25 @@
 		}
 
 		.marquee {
+
+			height: min-content ;
+			width: fit-content;
+			border-style: outset;
+			border-width: 10px;
 			color: #FFFFFF;
 			display: inline-block;
 			background-image: -webkit-linear-gradient(left, violet, indigo, blue, green, yellow, orange, red);
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
-			animation: marquee 5s linear infinite;
+			animation: marquee 0s linear infinite;
+			font-size: 22cap;
+			
 		}
 
 
 		.marquee-img {
-			height: 96px;
-			width: 96px;
+			height: 128px;
+			
 			display: inline-block;
 
 
@@ -130,7 +178,11 @@
 		</div>
 
 	<div class="heading">
-		<center> <img src="images/greenguy.gif">
+		<center>
+			<br>
+			<img src="images/html_incomp.gif" >
+			<br>
+			<img src="images/greenguy.gif">
 
 			<marquee behavior="scroll" direction="left">
 				<div class=marquee>
@@ -273,40 +325,80 @@
 		</center>
 		</div>
 		
+		<br>
+		<br>
 
 		<div class="construction">
 			<center>
+			<img src="images/construction/undercontruct.gif">
+			<br>
+			<img src="images/construction/const2.gif">
+			<br>
+
+			
 		<p> SITE STILL UNDER CONTSTUCTION </p>
 		<img src="images/construction/construc.gif">
+		
+		<img src="images/construction/constrc.gif">
 	
 		
 			<img src="images/construction/ATWORK01.GIF">
 			<P> it has been two years and it is still a work in progress</p>
+				<center>
+					<img src="images/construction/splatman.gif">
+				<img src="images/construction/construction.gif">
+				<br>
+			
+			
 			<img src="images/construction/CONSTRCT.GIF">
+			<img src="images/construction/travaux1.gif">
+			
+			<img src="images/construction/stress.gif">
+			<br>
+			<img src="images/construction/conbar2.gif">
+		
 		</center>
 		
+		
+		</div>
+		<br>
+		<br>
+
+		<div class ="post"> 
+		<P>
+			<center>
+				<IMG SRC="images/post/pobox.gif">
+					<IMG SRC="images/post/connechhting.gif">
+						<IMG SRC="images/post/email.gif">
+							<IMG SRC="images/post/mail.gif">
+				</center>
+				<center>
+					Send me some eletronic Postage if you have any questions, suggestions,
+				or to say hello
+			<A HREF="mailto:Carrick<unknow5763@gmail.com>">Click Here</A>
+			<IMG SRC="images/post/mbox.gif" ALIGN="ABSMIDDLE" WIDTH=63 HEIGHT=48 BORDER=0 ALT="Mail">
+		</P>
+	</center>
 		</div>
 
-		<P>
-			.<BR> <BR>
-				<center>
-			<A HREF="mailto:Carrick<unknow5763@gmail.com>">Send me Mail if you have any questions, suggestions,
-				or to say hello</A>
-			<IMG SRC="images/mbox.gif" ALIGN="ABSMIDDLE" WIDTH=63 HEIGHT=48 BORDER=0 ALT="Mail">
-		</P>
+
 		<BR>
 
-		<p>
+			<div class = "musak">
+		<p>	
 			<img src="images/equilizer.gif">
 			<br>
 			I have two degrees in music technology, and like playing guitar, synth and bass. I also like
 			programming music using programmes such as c sound.
+			<center>
+			<img src = "images/music/AGUITAR.GIF"><img>
+			<br>
 			<A HREF="https://soundcloud.com/carrick"> click this yoke to check out my musics.
+				<br>
+				
+			</center>
 		</p>
-
 	
-	</center>
-
 		<p align="center"><iframe width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay"
 			src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241325801&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
 		</iframe>
@@ -318,9 +410,24 @@
 				href="https://soundcloud.com/carrick/night-sky" title="Night Sky" target="_blank"
 				style="color: #cccccc; text-decoration: none;"></a>
 		</div>
-	</p>	
+		<img src = "images/music/musicline14.gif"><img>
+	</p>
+</div>
+
+
+<div class = "Links">
+
+	<h2>Here are some cool lynks from across the cyberSpace</h2>
+
+	<ul>
+		<li> dis webzone is amazing !https://geocities.restorativland.org/</li>
+	</ul>
+
+</div>
+
+
 	<center>
-		<img src="images/musicline14.gif"> </img>
+		
 		<p>
 		<div>
 			I am an avid player of chess as well, click these to add me if you play online chess. <BR> <BR>
