--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			margin:auto;
 			background-image: url("images/Dukesource125.gif");
 			transform: scale(1.6);
-		
+			
 		}
 
 		div.car{
@@ -45,7 +45,8 @@
 			margin:auto;
 			background-image: url("images/PATT035.JPG");
 			color: #ffe9e9;
-			font-size: 2em;
+			font:bolder;
+			
 		}
 
 		div.musak{
@@ -55,6 +56,7 @@
 			width: fit-content;
 			margin:auto;
 			background-image: url("images/music/musicBk.jpg");
+			font-size: 10px;
 		}
 
 		div.construction{
@@ -166,7 +168,7 @@
 <body BGCOLOR="#000000" BODY BACKGROUND="images/bkgrade.jpg" TEXT="#ffe6e6  " LINK="#ff6666" VLINK="#ff6666"
 	ALINK="#ff6666">
 
-	<div class="smelly">
+	
 		<center>
 			<br>
 			<br>
@@ -197,8 +199,11 @@
 		</center>
 	</div>
 
-	
+	<div class="smelly">
+		<div>
 			<p>Hello, I am carrick, and welcome to my webpage here on the internet.
+
+				I am Irish, I live in a tiny shit-hole of a place where I might be the only queer in the village. 
 				I am 26 years old. I study with the confusers. I like linux, wood working and big into music. I
 				drive an old car and have a big subwoofer in it. I am fond of cats. this website breaks as soon as you load it on a mobile. you have been warned. 
 				
@@ -222,7 +227,7 @@
 			<br>
 			<br>
 
-		</center>
+		
 
 		<center>
 			<div id="windows"  class ="framed">
@@ -314,13 +319,16 @@
 		</p>
 		<div class="car">
 		<center>
+			<img src ="images/car/volkswagen.htm_cmp_auto110_bnr.gif"
+		</center>
+		<center>
 			<br>
-			<IMG SRC="images/golf.png" width="350">
+			<IMG SRC="images/car/golf.png" width="350">
 			<p>I drive a 2003 golf mk4</p>
 			<p>It's going mighty at the moment. with a cracked windscreen...</p>
 			<p> I never thought I would drive a golf but I am found of the older cars.</p>
 			<p> I am not a Vee Dubber stan but I do recommend a mk4 golf if you need a car</p>
-			<img SRC="images/vw_spin.gif">
+			<img SRC="images/car/vw_spin.gif">
 			<br>
 		</center>
 		</div>
@@ -447,6 +455,7 @@
 			</center>
 	</div>
 
+	</div>
 
 	<br>
 	<center>
