--- a/index.html
+++ b/index.html
@@ -328,6 +328,10 @@
 			<p>It's going mighty at the moment. with a cracked windscreen...</p>
 			<p> I never thought I would drive a golf but I am found of the older cars.</p>
 			<p> I am not a Vee Dubber stan but I do recommend a mk4 golf if you need a car</p>
+			<br>
+				<img src = "images/car/YEAH.jpg" width="250">
+				<p> This image is accurate. </p>
+			<br>
 			<img SRC="images/car/vw_spin.gif">
 			<br>
 		</center>
@@ -355,6 +359,7 @@
 				<center>
 					<img src="images/construction/splatman.gif">
 				<img src="images/construction/construction.gif">
+				<img src ="images/construction/constrsuction.gif">
 				<br>
 			
 			
