--- a/index.html
+++ b/index.html
@@ -584,6 +584,7 @@ background=1995.png&tablecolor=black&textcolor=white" frameborder="0"></iframe>
 
 		</footer>
 		<p>ALL OWNED BY CARRICK COPYRIGHT 2023</p>
+		<p>This page was started may1 2020 Three years!</p>
 		<p> Except for the stuff I stole, Some stuff from this<a href=" https://etc.usf.edu/maps"> This </a>
 		
 		</p>
