--- a/index.html
+++ b/index.html
@@ -12,28 +12,38 @@
 			border-style: outset;
 			border-width: 10px;
 			background-image: url("images/stars.gif");
-			width: 90%;
+			width: auto;
 			margin: auto;
 
 		}
 
 		div.frame{
-			display: ;
+			display: flex;
 			border-style: outset;
 			border-width: 10px;
 			height: min-content ;
-			width: 60%;
+			width: 50%;
 			background-image: url("images/bg01.gif");
+		}
+
+		div.css{
+			all: revert;
+			font-size:64px;
+			border:5px solid white;
+			padding:0px 3px;
+			width:200px;
+			white-space: pre;
+			
 		}
 
 		div.framed{
 			border-style: outset;
 			border-width: 10px;
-			height: min-content ;
+			height: fit-content ;
 			width: fit-content;
 			margin:auto;
 			background-image: url("images/Dukesource125.gif");
-			transform: scale(1.6);
+			transform: scale(1);
 			
 		}
 
@@ -96,7 +106,7 @@
 			color: #7c3891;
 		
 			text-shadow: 20px 21px #000000;
-			font-size: 10em;
+			font-size: 8em;
 
 		}
 
@@ -107,6 +117,8 @@
 			font-size: 5em;
 
 		}
+
+	
 
 		div.computers {
 			border-style: outset;
@@ -146,6 +158,7 @@
 			display: inline-block;
 			background-image: -webkit-linear-gradient(left, violet, indigo, blue, green, yellow, orange, red);
 			-webkit-background-clip: text;
+			background-clip: text;
 			-webkit-text-fill-color: transparent;
 			animation: marquee 0s linear infinite;
 			font-size: 22cap;
@@ -178,6 +191,7 @@
 			<br>
 			<br>
 		</div>
+		</center>
 
 	<div class="heading">
 		<center>
@@ -201,12 +215,12 @@
 
 	<div class="smelly">
 		<div>
-			<p>Hello, I am carrick, and welcome to my webpage here on the internet.
+			<p>Hello, and welcome to my webpage here on the internet.
 
-				I am Irish, I live in a tiny shit-hole of a place where I might be the only queer in the village. 
+				I am Irish, 
 				I am 26 years old. I study with the confusers. I like linux, wood working and big into music. I
-				drive an old car and have a big subwoofer in it. I am fond of cats. this website breaks as soon as you load it on a mobile. you have been warned. 
-				
+				drive an old car and have a big subwoofer in it. Please find some stupid things on this website.
+				I am fond of cats. this website breaks as soon as you load it on a mobile. you have been warned. 
 			</p>
 	
 			<br>
@@ -282,6 +296,7 @@
 		<br>
 		<br>
 
+
 		<div class="Lang">
 			<H2> Confuzer Languages i know of..</h2>
 			<ul>
@@ -309,14 +324,11 @@
 				<p> his name is keith and he is missing his back leg as he cannot handle pointers, this image was drawn by Richard Stallman</p></Center>
 
 				<p> Here is a link to my <a href ="https://github.com/Carrick-pre" > Github...</a></p>
-				
-
-		</div>
-		</p>
-
-		<p>
-			
-		</p>
+			</div>
+			</div>
+			<center>
+		<div class = "css">I LOVE CSS</div>
+	</center>
 		<div class="car">
 		<center>
 			<img src ="images/car/volkswagen.htm_cmp_auto110_bnr.gif"
@@ -438,6 +450,53 @@
 
 </div>
 
+<div class="books">
+	<center>
+	<h4> Sometimes I read ! </h4>
+	</center>
+	<p> I do really like books, I am not reading enough books the last few years I'll be honest. 
+		I drive a lot these days and tend to listen to my books more often than not. But I still try and read a few a year. This year 2023, I have been so busy its not fair, I tend to just collaspe into bed, or look for pictures for this v. silly webzone. 
+
+		I used to read almost every night and I need to get back into that habit. I am convinced the reason why I am so badly near-sighted now as an adult is that as a kid I would be very very very often up into the wee hours of morning reading by any and all light sources that where assesciable. 
+
+
+	</p>
+	<h5>Sci Fi Books I think you should read !</h5>
+	<p> I have always been into sci books since I started reading, as a kid the coolest bit of Sci/Fi fantasy books was 
+		the tech or magic, but as I grew into my teenage years and now as an adult I kinda see that the most intersting part of any good fiction book
+		is not the tech or whatever, its the exammination of normal (Mostly) human behavior in un-ordinary situations and the philosphy and emotions and all that fluff 
+		that comes out of these situations. Idk it reminds me somewhat of the story, DOG BITES MAN vs MAN BITES DOG. One is a lot more engaging and possibly more insightful than the other. idk dont listen to me.
+
+		I do really think that good sci-fi is very akin to philosphy. ANYWHAY ILL HAVE TO EDIT THIS LATER THIS IS SHITE. 
+			<center> <h5> CARRICK'S TOP FIVE SCI FI BOOKS</h5></center>
+		<li>1) The left hand of darkness by Ursula K. Le Guin </li>
+		<p> I have had gone trough my hands five copies of this book, I keep buying a copy to reread it every 2 years or so just to then pass my copy to anybody I think I can force to read it, 
+			its just masterful. It very akin or similar to that of a, just more mature and more emotional & more intimate Asimov, the very measured and well invisioned world, with the very very nicely done in universe almost antropological take on the world, 
+			for as early as it is, it's still fresh. I think that is an aspect that still shocks me. I've read the book at least 5 times now, and still even writing this I just want to go trough the journey again. 
+
+			Honestly though, it's great. Gender benders in space with ice would be the elevator sell. But that does it a in justice. 
+		</p>
+		<li> This one is a bit obligatory and to be honest this is just a place holder </li>
+	</p>
+
+	<h5>Online / Ebooks you can read for freee right now! </h5>
+		<p> here is just a few books or book like things that I think are worthwhile. I think the Internet is at its best where it lets some very niche very cool stuff just escape out into the world, where other people come and find this stuff and it gets into their heads. These are some examples of weird and v. cool stuff that defo did that to me. </p>
+		<ul>
+		<li>1776 Or the future of American Football <a href = "https://www.sbnation.com/a/17776-football"> Click here !</a></li>
+			<p> Now I hate sport ball, but honest to god if you have never encountered this before just go read it, its amazing. I dont want to spoil it, I think I will re read it and give it a proper review of sorts at some point. If I do <a href="">This link might work. </a> Honestly though read it its very asseciable, you'll laugh you'll cry its very satrical and funny while having a true stream of emotion and just scope to the whole thing that is very refreshing and still nearly 4 years later I have not seen the like of. The writer  <a href="https://en.wikipedia.org/wiki/Jon_Bois">Jon Bois</a> Also has a very good <a href="https://www.youtube.com/user/jonbois"> You-Tube Chanel</a> I recomend his vid-jay-o on the olympic race. 
+				Very Very good, he also uses Hobbes as a profile picture which this website is in full support of</p>
+		<li>All Tomorrows: A Billion Year Chronicle of the Myriad Species and Mixed Fortunes of Man</li>
+		<p> <a href="https://web.archive.org/web/20061124141617/http://www.nemoramjet.com/alltomorrows.pdf"> Available here </a> This book is great, really got into my head and under my skin. 
+			I was listening to the ebook version of this as I crashed and totaled my Nissan Almera. I am still not quite happy about that. The guy who did this book, I think hes doing another or he is revising the illustrations. 
+			Would reccomend tho. Its a creepy and very worthwhile read. I haven't read much exilstential body horror stuff but this is great. GO READ ITS FREE !</p>
+	</ul>
+	<h5>Other books I quite like (FICTIONAL) </h5>
+		<li> Go read some johhny swift very good. </li>
+		<li> </li>
+	<h5>Non fiction</h5>
+	<li> I dont read that many </li>
+</div>
+
 
 	<center>
 		
@@ -480,7 +539,6 @@ background=1995.png&tablecolor=black&textcolor=white" frameborder="0"></iframe>
 				<a target="_blank" href="https://momg.neocities.org/"><img alt="Visit the Gif Gallery!"
 						src="https://momg.neocities.org/site-images/momg-badge.gif"></a>
 						<img src="images/Buttons/2b63533b.gif">
-						<img src="images/buttons/2b63533b.gif">
 						<img src="images/buttons/800x600.gif">
 						<img src="images/buttons/abasawd3.jpg">
 						<img src="images/buttons/angyangy.gif">
