--- a/index.html
+++ b/index.html
@@ -475,6 +475,8 @@
 			for as early as it is, it's still fresh. I think that is an aspect that still shocks me. I've read the book at least 5 times now, and still even writing this I just want to go trough the journey again. 
 
 			Honestly though, it's great. Gender benders in space with ice would be the elevator sell. But that does it a in justice. 
+			It has in it a level of intimacy between two characters that is lacking from a lot of sci fi books.
+			<center> <img src = "images/books/lefthand.jpg"></center>
 		</p>
 		<li> This one is a bit obligatory and to be honest this is just a place holder </li>
 	</p>
@@ -482,13 +484,15 @@
 	<h5>Online / Ebooks you can read for freee right now! </h5>
 		<p> here is just a few books or book like things that I think are worthwhile. I think the Internet is at its best where it lets some very niche very cool stuff just escape out into the world, where other people come and find this stuff and it gets into their heads. These are some examples of weird and v. cool stuff that defo did that to me. </p>
 		<ul>
-		<li>1776 Or the future of American Football <a href = "https://www.sbnation.com/a/17776-football"> Click here !</a></li>
+		<li>17776 Or the future of American Football <a href = "https://www.sbnation.com/a/17776-football"> Click here !</a></li>
 			<p> Now I hate sport ball, but honest to god if you have never encountered this before just go read it, its amazing. I dont want to spoil it, I think I will re read it and give it a proper review of sorts at some point. If I do <a href="">This link might work. </a> Honestly though read it its very asseciable, you'll laugh you'll cry its very satrical and funny while having a true stream of emotion and just scope to the whole thing that is very refreshing and still nearly 4 years later I have not seen the like of. The writer  <a href="https://en.wikipedia.org/wiki/Jon_Bois">Jon Bois</a> Also has a very good <a href="https://www.youtube.com/user/jonbois"> You-Tube Chanel</a> I recomend his vid-jay-o on the olympic race. 
 				Very Very good, he also uses Hobbes as a profile picture which this website is in full support of</p>
+				<center> <img src = "images/books/17776.jpg" width = 300px> </center>
 		<li>All Tomorrows: A Billion Year Chronicle of the Myriad Species and Mixed Fortunes of Man</li>
-		<p> <a href="https://web.archive.org/web/20061124141617/http://www.nemoramjet.com/alltomorrows.pdf"> Available here </a> This book is great, really got into my head and under my skin. 
+		<p> <center><a href="https://web.archive.org/web/20061124141617/http://www.nemoramjet.com/alltomorrows.pdf"> Available here </a> This book is great, really got into my head and under my skin. 
 			I was listening to the ebook version of this as I crashed and totaled my Nissan Almera. I am still not quite happy about that. The guy who did this book, I think hes doing another or he is revising the illustrations. 
 			Would reccomend tho. Its a creepy and very worthwhile read. I haven't read much exilstential body horror stuff but this is great. GO READ ITS FREE !</p>
+			<center><img src="images/books/All_tomorrows_cover.jpg" width = 300px></center>
 	</ul>
 	<h5>Other books I quite like (FICTIONAL) </h5>
 		<li> Go read some johhny swift very good. </li>
@@ -538,7 +542,8 @@ background=1995.png&tablecolor=black&textcolor=white" frameborder="0"></iframe>
 			</center>
 				<a target="_blank" href="https://momg.neocities.org/"><img alt="Visit the Gif Gallery!"
 						src="https://momg.neocities.org/site-images/momg-badge.gif"></a>
-						<img src="images/Buttons/2b63533b.gif">
+						<img src="images/buttons/2b63533b.gif">
+						<img src = "images/buttons/navisearch">
 						<img src="images/buttons/800x600.gif">
 						<img src="images/buttons/abasawd3.jpg">
 						<img src="images/buttons/angyangy.gif">
