--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 
 		}
 
+		
+		.book img {
+			max-width: 400px;
+			
+		}
+
 		div.css {
 			all: revert;
 			font-size: 64px;
@@ -122,7 +128,7 @@
 			color: #7c3891;
 
 			text-shadow: 20px 21px #000000;
-			font-size: 8em;
+			font-size: 12;
 
 		}
 
@@ -130,7 +136,7 @@
 			color: #FFFFFF;
 			text-align: center;
 			text-shadow: 20px 20px #000000;
-			font-size: 5em;
+			font-size: 12;
 
 		}
 
@@ -177,7 +183,7 @@
 			background-clip: text;
 			-webkit-text-fill-color: transparent;
 			animation: marquee 0s linear infinite;
-			font-size: 22cap;
+			font-size: 96px;
 
 		}
 
@@ -203,11 +209,14 @@
 		<br>
 		<br><br>
 		<div class="frame">
+			<center>
 			<h1>Carrick's page</h1>
+		</center>
 			<br>
 			<br>
 		</div>
 	</center>
+	<br> <br>
 
 	<div class="heading">
 		<center>
@@ -238,23 +247,13 @@
 				drive an old car and have a big subwoofer in it. Please find some stupid things on this website.
 				I am fond of cats. this website breaks as soon as you load it on a mobile. you have been warned.
 			</p>
-
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
+			<center>
 			<img src="images/queer.gif">
+		</center>
 			<br>
 			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
+		
+		
 			<br>
 
 
@@ -263,14 +262,7 @@
 				<div id="windows" class="framed">
 					<iframe src="Ai.html" height="340" width="400"> </iframe>
 				</div>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
+			
 				<br>
 				<br>
 
