--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			border-style: outset;
 			border-width: 10px;
 			height: min-content;
-			width: 50%;
+			width: min-content;
 			background-image: url("images/bg01.gif");
 		}
 
@@ -224,18 +224,10 @@
 			<img src="images/html_incomp.gif">
 			<br>
 			<img src="images/greenguy.gif">
-
-			<marquee behavior="scroll" direction="left">
-				<div class=marquee>
-					<div style="display: flex; align-items: center;">
-						<img src="images/lain.gif" class="marquee-img">
-						<h100 style="margin: 0;">Hello welcome to my internet page, I hope you enjoy your stay<h100>
-								<img src="images/lain.gif" class="marquee-img">
-					</div>
-				</div>
-
-			</marquee>
 		</center>
+
+	
+		
 	</div>
 
 	<div class="smelly">
@@ -250,13 +242,19 @@
 			<center>
 			<img src="images/queer.gif">
 		</center>
-			<br>
-			<br>
-		
-		
-			<br>
+			
+			<marquee behavior="scroll" direction="left">
+				<div class=marquee>
+					<div style="display: flex; align-items: center;">
+						<img src="images/lain.gif" class="marquee-img">
+						<h100 style="margin: 0;">Hello welcome to my internet page, I hope you enjoy your stay<h100>
+								<img src="images/lain.gif" class="marquee-img">
+					</div>
+				</div>
 
-
+			</marquee>
+			
+			<br><br>
 
 			<center>
 				<div id="windows" class="framed">
@@ -514,6 +512,8 @@
 				it's very self evident from the prose that gibson was on drugs for a lot of the time he was writing this book. In particular the fact that case the main character, the readers analogue 
 				is a drug addict. It's clear gibson loved coke and speed at any rate. I dont have any issue with that myself but even when he describes wild future drugs 
 				it doesnt have the imagination that dick would with such subject matter.
+
+			<center>	<img src = "images/books/neuro.jpg"></center>
 
 				Theres very little emotions or real depth to any of the characterizations in the book, nobodies motives are ever exammined at any depth, 
 				while there is a bit of politics in the book, it's almost verbaitm from that of the scence in blade runner where in neo los angles where you see the asian woman drinking coca-cola. 
