I did some things.
Dwadwa

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
+		img {
+			max-width: 100%; 
+			height: auto;
+		}
 		div.smelly {
-			background: rgba(0, 0, 0, 0.3);
+			
 			border-style: outset;
 			border-width: 10px;
 			background-image: url("images/stars.gif");
@@ -27,8 +31,7 @@
 		}
 
 		div.book {
-			display:
-				inline-block;
+		
 			border-style: inset;
 			border-width: 10px;
 			background-color: #ffe9e9;
@@ -40,6 +43,19 @@
 			padding: 5%;
 
 		}
+
+		div.car {
+			border-style: outset;
+			border-width: 10px;
+			height: min-content;
+			width: fit-content;
+			margin: auto;
+			background-image: url("images/PATT035.JPG");
+			color: #ffe9e9;
+			font: bolder;
+
+		}
+
 
 		
 		.book img {
@@ -62,24 +78,12 @@
 			border-width: 10px;
 			height: fit-content;
 			width: fit-content;
-			margin: auto;
 			background-image: url("images/Dukesource125.gif");
 			transform: scale(1);
 
 		}
 
-		div.car {
-			border-style: outset;
-			border-width: 10px;
-			height: min-content;
-			width: fit-content;
-			margin: auto;
-			background-image: url("images/PATT035.JPG");
-			color: #ffe9e9;
-			font: bolder;
-
-		}
-
+	
 		div.musak {
 			border-style: outset;
 			border-width: 10px;
@@ -113,7 +117,7 @@
 			color: #FFFFFF;
 		}
 
-		div.links {
+		div.Links {
 			border-style: outset;
 			border-width: 10px;
 			height: min-content;
@@ -146,7 +150,7 @@
 			border-style: outset;
 			border-width: 5px;
 			background-image: url("images/bk1.jpg");
-			width: 70%;
+			width: fit-content;
 			margin: auto;
 		}
 
@@ -258,7 +262,7 @@
 
 			<center>
 				<div id="windows" class="framed">
-					<iframe src="Ai.html" height="340" width="400"> </iframe>
+					<iframe src="Ai.html" style="width: 400px; height: 301px;" scrolling="no"> </iframe>
 				</div>
 			
 				<br>
@@ -345,7 +349,7 @@
 
 		<div class="car">
 			<center>
-				<img src="images/car/volkswagen.htm_cmp_auto110_bnr.gif" </center>
+				<img src="images/car/volkswagen.htm_cmp_auto110_bnr.gif"  style="max-width: 100%; height: auto;"</center>
 				<center>
 					<br>
 					<IMG SRC="images/car/golf.png" width="350">
@@ -458,7 +462,7 @@
 			<h2>Here are some cool lynks from across the cyberSpace</h2>
 
 			<ul>
-				<li> dis webzone is amazing !https://geocities.restorativland.org/</li>
+				<li> dis webzone is amazing !<a href = "https://geocities.restorativland.org/" > I stole from here</a></li>
 			</ul>
 
 		</div>
@@ -517,7 +521,7 @@
 
 				Theres very little emotions or real depth to any of the characterizations in the book, nobodies motives are ever exammined at any depth, 
 				while there is a bit of politics in the book, it's almost verbaitm from that of the scence in blade runner where in neo los angles where you see the asian woman drinking coca-cola. 
-				<center> <img src ="images/cola.jpg"></center>
+				<center> <img src ="images/cola.jpg" style="width: 400px ;"></center>
 				What I mean by that is its all shorthand and some of it coming from a place of ignorance and fear mongering more so that of art. 
 				
 				Japan-aphobia mixed in with the idea that we will both wreck the planet and also get to dick around inspace, there is also very cringe 
@@ -534,6 +538,12 @@
 
 				I would give it 4/5. but very light 4. 
 			</p>
+
+			<li>Rendezvous with Rama</li>
+			
+			<p> The book is good. Has that slightly chunky writing that Clarke has, his vivid and whirlwind of imagination and details are on full show here. This is the secound book I have read of his, 
+				the only other was Foundation Series, which I really quite liked. In contrast with a lot of the elements in that book, this book is a little more less vivid in some of the prose, but still great idea, great execution.
+				<center> <img src = "images/books/Rama_copy.jpg"> </center></p>
 
 			</p>
 			<h5>Sci Fi Books I think you should read !</h5>
@@ -609,6 +619,17 @@
 			<li> I dont read that many </li>
 		</div>
 
+		<div class = "Movies">
+		
+			<p> Not going to lie to you, this section on this website is just really an excuse to have as many photos as possible of X files more than anything else. </p>
+			<br> <br>
+			<p> I first watched X files on DvD way back when, It has to be when I was 12/13 or so, But I have been watching some again recently. It's rather strange. As a literal child I did not pickup on half of the amount of chesse and just strange descions and weird plots that I am not picking up on as of now. 
+			
+			I think the show went on way too long for it to ever properly proper get to be a gem. But take it for what it is and what since the age of 12 I thought of it was, which is that of Scooby Doo for kids, it makes a lot more sense. 
+			
+			and some of the weird and awkward choices are more forgiveable. 
+			</p>
+		</div>
 
 		<center>
 
