--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+	<title>Carricks Website</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -132,7 +132,7 @@
 			color: #7c3891;
 
 			text-shadow: 20px 21px #000000;
-			font-size: 12;
+			font-size: 12em;
 
 		}
 
@@ -140,7 +140,7 @@
 			color: #FFFFFF;
 			text-align: center;
 			text-shadow: 20px 20px #000000;
-			font-size: 12;
+			font-size: 12em;
 
 		}
 
@@ -225,7 +225,7 @@
 	<div class="heading">
 		<center>
 			<br>
-			<img src="images/html_incomp.gif">
+			<img src="images/html_incomp.gif" >
 			<br>
 			<img src="images/greenguy.gif">
 		</center>
