--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
 			color: #7c3891;
 
 			text-shadow: 20px 21px #000000;
-			font-size: 12em;
+			font-size: 3em;
 
 		}
 
 		h2 {
-			color: #FFFFFF;
+			color: #ffffff;
 			text-align: center;
 			text-shadow: 20px 20px #000000;
-			font-size: 12em;
+			font-size: 3em;
 
 		}
 
@@ -456,6 +456,10 @@
 			</p>
 		</div>
 
+		<br>
+		<br>
+
+
 
 		<div class="Links">
 
@@ -463,6 +467,12 @@
 
 			<ul>
 				<li> dis webzone is amazing !<a href = "https://geocities.restorativland.org/" > I stole from here</a></li>
+				<li> dis is another amazing link. Please click this more than any other link you might stumble across today. 
+					 this website has a really good noises. <a href="https://www.cameronsworld.net/"> Click here ! </a>
+				</li>
+				<li>Only click this link if you like corndogs. As an Irish person I haven't even had one but I imagine they arent that bad <a href=""</a></li>
+				<li>Only click this link if you like corndogs. As an Irish person I haven't even had one but I imagine they arent that bad <a href="http://corndog.io/"> click here </a></li>
+				<li>If your english buy a car off this lot <a href="https://www.lingscars.com/">Click here if you need a car</a></li>
 			</ul>
 
 		</div>
@@ -541,9 +551,25 @@
 
 			<li>Rendezvous with Rama</li>
 			
-			<p> The book is good. Has that slightly chunky writing that Clarke has, his vivid and whirlwind of imagination and details are on full show here. This is the secound book I have read of his, 
-				the only other was Foundation Series, which I really quite liked. In contrast with a lot of the elements in that book, this book is a little more less vivid in some of the prose, but still great idea, great execution.
+			<p> The book is good. Has that slightly chunky writing that Clarke has, his vivid and whirlwind of imagination and details are on full show here. This is the first Clark novel that I have ever read. I have the yoke that got made into the 2001 movie 
+				and a collection of short stories with dolphins on the cover. But either I never found the right time to read them or just wasnt wowed by the prose.
+				I guess the biggest complaint I have is its one of those books that just draws you in and then forgets to properly explain everthing. Paints a very vivid world and loves to throw some hard sci fi into the setting making everthing very logical, 
+				also has a few moments of funny. It's a good book, but its missing something. You can really tell he wanted to milk this idea for all its worth, it doesn't feel as single minded or as information dense as other stuff. 
+				Clarke is no asimov. Hes vistas are lacking something. His emotinons and sentimentality needs adjusting. Not a tight of a ship as I would have thought, but absolutely captivating and making you wanting more with each page turn.
+
+				to get into the weeds, some of his throw away lines are stupid. Clarke is very much agaisnt bigamny, a few of the characters have two wives and he sends each wive the same voice note making sure it is serivceable to the both of them. Two other space crew share a wife and its all 
+				very look at how weird this is. That being said his writing of the actual female characters (the scant times they where written about) wasn't that bad at all. apart from the time he recounts the time a serious Space Ship accident was caused by the very distrating clevage a woman had as it bounced around
+				in zero - G. 
+
+				Half the book (not really but everytime it happens it goes on too slow and is boring) is given over to a board room meeting on the moon, and it was endearing and engaging at the start, but was just boring and you want to know what the crew are doing on the alien ship. 
+				
+				The stuff actually about discovering the ship and the whole build up was quite good though. Its a decent book trough and trough. 
+
+				If I get around with reading the rest of the them I'll leave my opions here, but based on the synposis on wiki they will do the same as this one. 
+
+				Be decently written, quite engaging but make me want to strangle him with his tie to make him get to the point. 
 				<center> <img src = "images/books/Rama_copy.jpg"> </center></p>
+				<center> I give this the typical ramian feature of 3 out of five</center>
 
 			</p>
 			<h5>Sci Fi Books I think you should read !</h5>
@@ -784,8 +810,9 @@ background=1995.png&tablecolor=black&textcolor=white" frameborder="0"></iframe>
 			</div>
 
 			<p>ALL OWNED BY CARRICK COPYRIGHT 2023</p>
-			<p>This page was started may1 2020 Three years!</p>
-			<p> Except for the stuff I stole, Some stuff from this<a href=" https://etc.usf.edu/maps"> This </a>
+			
+			<p> Except for the stuff I stole, Some stuff from <a href=" https://etc.usf.edu/maps"> This </a> Other stuff was stolen from a lot of geocities archives..
+				<p>This page was started may1 2020 Three years!</p>
 
 	</center>
 
