--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
 
 		}
 
+		div.xfiles{
+			
+			border-style: outset;
+			border-width: 10px;
+			background-image: url("images/xfiles/anibg1.gif");
+			width: fit-content;
+			height: fit-content;
+			
+
+		}
+
 		div.frame {
 			display: flex;
 			border-style: outset;
@@ -353,7 +364,7 @@
 				<center>
 					<br>
 					<IMG SRC="images/car/golf.png" width="350">
-					<p>I drive a 2003 golf mk4</p>
+					<p>I drive a 2003 golf mk4</p> <img SRC = "images/ripem.gif">
 					<p>It's going mighty at the moment. with a cracked windscreen...</p>
 					<p> I never thought I would drive a golf but I am found of the older cars.</p>
 					<p> I am not a Vee Dubber stan but I do recommend a mk4 golf if you need a car</p>
@@ -645,7 +656,7 @@
 			<li> I dont read that many </li>
 		</div>
 
-		<div class = "Movies">
+		<div class = "xfiles">
 		
 			<p> Not going to lie to you, this section on this website is just really an excuse to have as many photos as possible of X files more than anything else. </p>
 			<br> <br>
