--- a/Ai.html
+++ b/Ai.html
@@ -4,7 +4,7 @@
     <title>98.css example</title>
     <meta charset="UTF-8" />
 
-    <link rel="stylesheet" href="https://unpkg.com/98.css@0.1.4/build/98.css" />
+    <link rel="stylesheet" href="98.css" />
   </head>
 
   <body>
