--- a/photos.html
+++ b/photos.html
@@ -33,29 +33,29 @@ div.desc {
 </center>
 </div>
 <div class="gallery">
-  <a target="_blank" href="Images/Gallery/catacombsStairCase.jpg">
-    <img src="Images/Gallery/catacombsStairCase.jpg"  width="800" height="600"  alt="Forest">
+  <a target="_blank" href="images/Gallery/catacombsStairCase.jpg">
+    <img src="images/Gallery/catacombsStairCase.jpg"  width="800" height="600"  alt="Forest">
   </a>
   <div class="desc" >At the paris catacombs</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="Images/Gallery/Paris.jpg">
-    <img src="Images/Gallery/Paris.jpg" alt="Forest" width="600" height="400">
+  <a target="_blank" href="images/Gallery/Paris.jpg">
+    <img src="images/Gallery/Paris.jpg" alt="Forest" width="600" height="400">
   </a>
   <div class="desc">Photos of paris from the top of the arc de triumph</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="Images/Gallery/parisface.jpg">
-    <img src="Images/Gallery/parisface.jpg" alt="" width="600" height="400">
+  <a target="_blank" href="images/Gallery/parisface.jpg">
+    <img src="images/Gallery/parisface.jpg" alt="" width="600" height="400">
   </a
   <div class="desc">..</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="Images/Gallery/skulls.jpg">
-    <img src="Images/Gallery/skulls.jpg" alt="" width="600" height="400">
+  <a target="_blank" href="images/Gallery/skulls.jpg">
+    <img src="images/Gallery/skulls.jpg" alt="" width="600" height="400">
   </a>
   <div class="desc">catacomb</div>
 </div>
