--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 			/* background-image: url("images/xfiles/anibg1.gif"); */
 			background-color: #000;
 			width: fit-content;
-			height: fit-content;
+			height: min-content;
+			margin: 25px 50px 75px 100px;
+			padding: 10%;
 			
 
 		}
@@ -544,19 +546,42 @@
 		
 		<div class = "xfiles">
 			<center> <h1> <img src="images/xfiles/x1logow.gif">files </h1></center>
-			<p> Not going to lie to you, this section on this website is just really an excuse to have as many photos as possible of X files more than anything else. <img src="images/xfiles/ufoanim.gif" </p>
+			<p> Not going to lie to you, this section on this website is just really an excuse to have as many photos as possible of X files more than anything else. </p>
+			<center>
+			<img src="images/xfiles/ufoanim.gif" >
+		</center>
 			<br> <br>
-			<p> I first watched X files on DvD way back when, It has to be when I was 12/13 or so, But I have been watching some again recently. It's rather strange. As a literal child I did not pickup on half of the amount of chesse and just strange descions and weird plots that I am not picking up on as of now. 
+			<p> I first watched X files on DvD way back when, It has to be when I was 12/13 or so, But I have been watching some again recently.
+				 It's rather strange.
+				As a literal child I did not pickup on half of the amount of chesse and just strange descions and weird plots 
+				that I am not picking up on as of now. 
 			
 				<center> <br> <img src="images/xfiles/iwnt2bl.jpg"
 					<br> </center>
 			
-			I think the show went on way too long for it to ever properly proper get to be a gem. But take it for what it is and what since the age of 12 I thought of it was, which is that of Scooby Doo for kids, it makes a lot more sense. 
+			I think the show went on way too long for it to ever properly proper get to be a gem. But take it for what it is and what since the age of 12 
+			I thought of it was, which is that of Scooby Doo for kids, it makes a lot more sense. and some of the weird and awkward choices are more forgiveable. 
 			<center> <br> <img src="images/xfiles/x.gif"
+
+				<br>
+				<p> Plus I think Scully is a babe and had a massive crush on her </p>
 				<br> </center>
 				
-			and some of the weird and awkward choices are more forgiveable. 
-			</p>
+			
+		</p>
+		<center>
+			<img src="images/xfiles/ct-coff.gif" width="200" ALIGN="ABSMIDDLE">
+			
+			<br>
+			<img src="images/xfiles/turn_x.gif"
+			<br>
+			<hr>
+			<img src="images/xfiles/xpshnu.gif" width="400">
+			<hr>
+			
+			<img src="images/xfiles/xfblack.gif">
+		</center>
+			
 		</div>
 
 		<center>
