--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
 
 		}
 
+
+		h3{
+			color: #ffffff;
+			text-align: center;
+			font-size: 2em;
+
+		}
+
 		h22 {
 			color: #ff00ea;
 			text-align: center;
@@ -173,7 +181,8 @@
 			border-width: 5px;
 			background-image: url("images/bk1.jpg");
 			width: fit-content;
-			margin: auto;
+			margin: 5% ;
+			padding: 6%;
 		}
 
 		.confuzers {
@@ -195,8 +204,9 @@
 			background: rgba(0, 0, 0, 0.3);
 			border-style: outset;
 			border-width: 5px;
-			background-image: url("images/anistarz.gif");
+			background-image: url("images/navigation/purple.jpg");
 			width: 60%;
+			list-style: none;
 			margin: auto;
 		}
 
@@ -302,15 +312,20 @@
 
 
 			<div class="navigation">
-				<H2> Pages that are linked off this webzone are here </h2>
-				<ul>
-					<li><a href="movies.html">Movie reviews </a> Prolly very very empty at the moment as I dont watch many
-					<li><a href="photos.html"> This has pictures on it...</a></li>
-					<li><a href="pages.html"> this one is pretty dumb just a coding thing I did will do more I guess</a></li>
-					<li><a href="books.html">This is where I have all my rants and ravings on books very cool ! </a></li>
-					<li><a href="abstrct.html">logs your ip address ! :3 </a></li>
-
+				<center>
 					
+				<H3> Pages that are linked off this webzone are here </h2>
+
+					<img src = "images/navigation/bar3.gif">
+				<ul style="list-style: none;">
+					<li> <img src="images/navigation/handforward.gif"><a href="movies.html">Movie reviews </a> Prolly very very empty at the moment as I dont watch many... </a></li>
+
+					<li><img src="images/navigation/handforward.gif"><a href="photos.html"> This has pictures on it...</a>Gallery of images NEED TO ADD MORE REMIND ME </li>
+					<li><img src="images/navigation/handforward.gif"><a href="pages.html"> this one is pretty dumb just a coding thing I did will do more I guess</a> </li>
+					<li><img src="images/navigation/handforward.gif"><a href="books.html">This is where I have all my rants and ravings on books very cool ! </a></li>
+					<li><img src="images/navigation/handforward.gif"><a href="abstrct.html">logs your ip address ! :3 </a></li>
+
+				</center>
 			</div>
 		</div>
 
@@ -320,27 +335,28 @@
 					<div style="display: flex; justify-content: center; align-items: center;">
 						<img src="images/computer.gif" alt="" style="margin-right: 10px;">
 						<h2 style="margin: 0;">CONFUZERS</h2>
-						<img src="images/computer__meltingA.gif" alt="" style="margin-left: 10px;">
+						<img src="images/computer/computer__meltingA.gif" alt="" style="margin-left: 10px;">
 					</div>
 					<center>
 						<p1> Ive been messing around with computers since the age of 12 or so. I build somemyself and my
 							favourite laptops are thinkpads</p1>
+							<img src="images/computer/"
 						<p> I think computers are one of the best things and by far the worst things to happen to us as
 							human fleshy bags but sure look its chill as well.
 						</p>
 						<br>
-						<img src="images/toilettech.jpg" width="300">
+						<img src="images/computer/toilettech.jpg" width="300">
 						<br>
 						<br>
 						<p> this is a very informative picture</p>
 						<br>
 						<p> by the way I do use linux ! </p>
-						<img src="images/tux_computer_dig_md_clr.gif">
+						<img src="images/computer/tux_computer_dig_md_clr.gif">
 						<br>
 						<div style="display: flex; justify-content: center; align-items: center;">
-							<img src="images/comfrog.gif" alt="" style="margin-right: 10px;">
+							<img src="images/computer/comfrog.gif" alt="" style="margin-right: 10px;">
 							<p> I do not know what else to put here. </p>
-							<img src="images/computer3.gif" alt="" style="margin-left: 10px;">
+							<img src="images/computer/computer3.gif" alt="" style="margin-left: 10px;">
 						</div>
 					</center>
 				</center>
