--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			background-color: #000;
 			width: fit-content;
 			height: min-content;
-			margin: 25px 50px 75px 100px;
-			padding: 10%;
+			margin:5%;
+			padding: 5%;
 			
 
 		}
